--- a/index.html
+++ b/index.html
@@ -1,12 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link src="assets/css.reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
+    <script src="assets/javascript/app.js"></script>
+
+    <title>Train Schedule</title>
 </head>
-<body>
-    
+
+<body style="max-width: 80%; margin-left: auto; margin-right: auto;">
+    <!--Jumbotron-->
+    <div class="jumbotron text-center bg-dark text-white">
+        <h1 class="display-4">Train Tracker</h1>
+        <p class="lead">We Follow the Tracks so You Don't Have To</p>
+    </div>
+
+    <!--Table-->
+    <div class="card card-default">
+        <div class="card-body">
+            <table class="table table-sm">
+                <thead>
+                    <tr>
+                        <th scope="col">Employee Name</th>
+                        <th scope="col">Role</th>
+                        <th scope="col">Start Date</th>
+                        <th scope="col">Months worked</th>
+                        <th scope="col">Monthly Rate</th>
+                        <th scope="col">Total Billed</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Dan Johnson</th>
+                        <td>CTO</td>
+                        <td>01/16/2000</td>
+                        <td>221</td>
+                        <td>6500</td>
+                        <td>1436500</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Brett Gaynor</th>
+                        <td>Senior Developer</td>
+                        <td>03/15/2012</td>
+                        <td>75</td>
+                        <td>4500</td>
+                        <td>33750</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Ted Williams</th>
+                        <td>Developer</td>
+                        <td>11/22/2015</td>
+                        <td>30</td>
+                        <td>2500</td>
+                        <td>75000</td>
+                    </tr>
+                    <th scope="row">Fred Dryer</th>
+                    <td>QA Analyst</td>
+                    <td>01/01/2013</td>
+                    <td>65</td>
+                    <td>2000</td>
+                    <td>13000</td>
+                    </tr>
+                    <th scope="row">John Kurts</th>
+                    <td>Front end dev</td>
+                    <td>09/0s/2000</td>
+                    <td>213</td>
+                    <td>4000</td>
+                    <td>85200</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <br>
+    <!--Form,-->
+    <div class="card card-default">
+        <div class="card-body">
+            <form>
+                <div class="form-group font-weight-bold">
+                    <label>Employee Name:</label>
+                    <input class="form-control" type="text" placeholder="Name" id="name">
+                </div>
+                <div class="form-group font-weight-bold">
+                    <label>Employee Role:</label>
+                    <input class="form-control" type="text" placeholder="Role" id="role">
+                </div>
+                <div class="form-group font-weight-bold">
+                    <label>Start Date:</label>
+                    <input class="form-control" type="text" placeholder="Start date mm/dd/yyyy" id="startDate">
+                </div>
+                <div class="form-group font-weight-bold">
+                    <label>Monthly Rate:</label>
+                    <input class="form-control" type="text" placeholder="Monthly Rate" id="monthlyRate">
+                </div>
+                <button type="button" class="btn btn-dark" id="add">Submit</button>
+            </form>
+        </div>
+    </div>
+
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
+    <script src="app.js"></script> -->
 </body>
+
 </html>
